platform/airflow/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: airflow
  namespace: airflow
  annotations:
    external-dns.alpha.kubernetes.io/managed: "true"
    external-dns.alpha.kubernetes.io/hostname: airflow.bergtobias.com
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: traefik
      sectionName: websecure
  hostnames:
    - airflow.bergtobias.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: airflow-api-server
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
